--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
     color: cornflowerblue;
     font-weight: bold;
     margin-left: 1rem;
+    font-family: 'Titillium Web', sans-serif;
 }
 #box1 {
  border-radius: 5px;
@@ -24,4 +25,44 @@
 #submit {
   border-radius: 25px;
   width: 120px;
+  font-family: 'Titillium Web', sans-serif;
 }
+#enquire {
+  border-radius: 25px;
+  width: 200px;
+}
+#text {
+  font-family: 'Titillium Web', sans-serif;
+}
+#box2 {
+  border-radius: 5px;
+  box-shadow: 0 15px 30px 0 rgba(25, 71, 128, 0.2);
+  background-color: #ffffff;
+}
+#box3 {
+  box-shadow: 0 5px 20px 0 rgba(25, 71, 128, 0.2);
+  background-color: #ffffff;
+}
+
+/* #wordtoggle {
+  color: #fff;
+  font-family: 'Titillium Web', sans-serif; */
+  /* overflow: hidden; Ensures the content is not revealed until the animation */
+  /* border-right: .15em solid orange; The typwriter cursor */
+  /* white-space: nowrap; Keeps the content on a single line */
+  /* margin: 0 auto; Gives that scrolling effect as the typing happens */
+  /* letter-spacing: .15em; Adjust as needed */
+  /* animation:  */
+    /* typing 3s steps(30, end),
+    blink-caret .5s step-end, infinite;
+} */
+
+/* @keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
+} */
