--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,28 @@
+#hoverCart a {
+  position: absolute; /* Position them relative to the browser window */
+  left: -80px; /* Position them outside of the screen */
+  transition: 0.3s; /* Add transition on hover */
+  padding: 15px; /* 15px padding */
+  width: 100px; /* Set a specific width */
+  text-decoration: none; /* Remove underline */
+  font-size: 20px; /* Increase font size */
+  color: white; /* White text color */
+  border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
+}
+#hoverCart a:hover {
+  top: 0; /* On mouse-over, make the elements appear as they should */
+}
+#cart {
+  top: 20px;
+  background-color: #4CAF50;
+}
+
+#pic01 {
+  margin-left: auto;
+}
+#student {
+  min-height: 500px;
+}
 .icon {
   background-color: black;
 }
@@ -8,6 +33,7 @@
   margin-right: 6rem;
 }
 #addCart {
+    padding-top: 3px;
     width: 250px;
     height: 40px;
     border-radius: 22.5px;
@@ -43,6 +69,110 @@
   box-shadow: 0 5px 20px 0 rgba(25, 71, 128, 0.2);
   background-color: #ffffff;
 }
+#read {
+  font-family: 'Titillium Web', sans-serif;
+}
+#kay {
+  max-width: 100%;
+  max-height: 100%;
+}
+#neil {
+  max-width: 100%;
+  max-height: 100%;
+}
+@media(max-width: 500px){
+  #learn {
+    display: block;
+  }
+}
+@media(max-width: 500px){
+  #text {
+    text-align: center;
+   }
+}
+@media(max-width: 500px){
+  #read{
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media(max-width: 328px){
+  #kay {
+    order: 1;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  #sen1 {
+    order: 2;
+  }
+}
+@media(max-width: 328px){
+  #neil {
+    order: 1;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  #sen2 {
+    order: 2;
+  }
+}
+@media(max-width: 328px){
+  #img1 {
+    display: none;
+  }
+  #img2 {
+    display: none;
+  }
+  #img3 {
+    display: none;
+  }
+}
+@media(max-width: 328px){
+  #links {
+    margin-left: none;
+  }
+  #course {
+    text-align: center;
+  }
+}
+@media(max-width: 578px){
+  #pre-work {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0%;
+  }
+  #findout {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+  }
+  #facebook {
+    float: left;
+    display: block;
+  }
+  #twitter {
+    clear: both;
+    display: block;
+  }
+  #instagram {
+    float: left;
+    display: block;
+  }
+  #navy {
+    display: block;
+  }
+}
+@media(max-width: 545px){
+  #pic01 {
+    display: flex;
+    justify-content: start;
+    margin-left: none;
+    margin-right: auto;
+  }
+}
+
+
+
 
 /* #wordtoggle {
   color: #fff;
